--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "json-server": "^0.12.0",
+    "ngrx-store-fsa-helpers": "^1.0.0",
     "ramda": "^0.25.0",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.14"
