--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@ngrx/store-devtools": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "json-server": "^0.12.1",
+    "ngx-modialog": "^4.0.0-beta.3",
     "ramda": "^0.25.0",
     "rxjs": "^5.5.2",
     "tachyons": "^4.9.0",
+    "toastr": "^2.1.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -43,6 +46,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~8.0.47",
     "@types/ramda": "^0.25.0",
+    "@types/toastr": "^2.1.35",
     "codelyzer": "~4.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
