--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@angular/language-service": "^5.0.1",
     "@types/jasmine": "~2.6.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~8.0.51",
-    "@types/ramda": "^0.25.0",
+    "@types/node": "^8.0.53",
+    "@types/ramda": "^0.25.6",
     "@types/toastr": "^2.1.35",
     "codelyzer": "~4.0.1",
     "jasmine-core": "~2.8.0",
