upgrade to angular 5.1 + aot fixes

--- a/package.json
+++ b/package.json
@@ -3,50 +3,60 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "dev": "npm start & npm run start:api",
     "ng": "ng",
-    "start": "npm run server & ng serve",
-    "server": "json-server --watch db.json",
-    "serve": "ng serve",
+    "start": "ng serve",
+    "start:api": "json-server --watch db.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "random-data": "ts-node ./random-data.ts"
+    "build:uninversal": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "serve:uninversal": "node dist/server.js",
+    "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "generate:random-data": "ts-node ./random-data.ts"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.1",
-    "@angular/common": "^5.0.1",
-    "@angular/compiler": "^5.0.1",
-    "@angular/core": "^5.0.1",
-    "@angular/forms": "^5.0.1",
-    "@angular/http": "^5.0.1",
-    "@angular/platform-browser": "^5.0.1",
-    "@angular/platform-browser-dynamic": "^5.0.1",
-    "@angular/router": "^5.0.1",
+    "@angular/animations": "^5.1.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/platform-server": "^5.1.0",
+    "@angular/router": "^5.1.0",
+    "@angular/service-worker": "^5.1.0",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
-    "core-js": "^2.4.1",
+    "@nguniversal/express-engine": "^5.0.0-beta.5",
+    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "core-js": "^2.5.2",
+    "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "json-server": "^0.12.1",
-    "ngx-modialog": "^4.0.0-beta.3",
+    "ngx-modialog": "^5.0.0",
     "ramda": "^0.25.0",
-    "rxjs": "^5.5.2",
+    "rxjs": "^5.5.5",
     "tachyons": "^4.9.0",
-    "toastr": "^2.1.2",
+    "toastr": "^2.1.4",
+    "ts-loader": "^3.2.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^5.0.1",
-    "@angular/language-service": "^5.0.1",
-    "@types/jasmine": "~2.6.3",
+    "@angular/cli": "1.6.0",
+    "@angular/compiler-cli": "^5.1.0",
+    "@angular/language-service": "^5.1.0",
+    "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.53",
-    "@types/ramda": "^0.25.6",
+    "@types/node": "^8.0.57",
+    "@types/ramda": "^0.25.8",
     "@types/toastr": "^2.1.35",
     "codelyzer": "~4.0.1",
     "jasmine-core": "~2.8.0",
@@ -55,11 +65,12 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ngrx-store-freeze": "^0.2.0",
-    "protractor": "~5.2.0",
+    "protractor": "~5.2.1",
     "random-word": "^2.0.0",
+    "source-map-explorer": "^1.5.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
     "typescript": "~2.4.2"
