--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "npm start & npm run start:api",
+    "dev": "npm run start:api & npm run start",
+    "ssr": "npm run start:api & npm run serve:uninversal",
     "ng": "ng",
     "start": "ng serve",
     "start:api": "json-server --watch db.json",
@@ -15,7 +16,7 @@
     "serve:uninversal": "node dist/server.js",
     "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "generate:random-data": "ts-node ./random-data.ts"
+    "generate:random-data": "ts-node ./bin/random-data.ts"
   },
   "private": true,
   "dependencies": {
