--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/platform-server": "^5.1.0",
-    "@angular/router": "^5.1.0",
-    "@angular/service-worker": "^5.1.0",
-    "@ngrx/effects": "^4.1.1",
-    "@ngrx/router-store": "^4.1.1",
-    "@ngrx/store": "^4.1.1",
-    "@ngrx/store-devtools": "^4.1.1",
-    "@nguniversal/express-engine": "^5.0.0-beta.5",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "@angular/animations": "5.2.10",
+    "@angular/common": "5.2.10",
+    "@angular/compiler": "5.2.10",
+    "@angular/core": "5.2.10",
+    "@angular/forms": "5.2.10",
+    "@angular/http": "5.2.10",
+    "@angular/platform-browser": "5.2.10",
+    "@angular/platform-browser-dynamic": "5.2.10",
+    "@angular/platform-server": "5.2.10",
+    "@angular/router": "5.2.10",
+    "@angular/service-worker": "5.2.10",
+    "@ngrx/effects": "5.2.0",
+    "@ngrx/router-store": "5.2.0",
+    "@ngrx/store": "5.2.0",
+    "@ngrx/store-devtools": "5.2.0",
+    "@nguniversal/express-engine": "5.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "5.0.0",
     "core-js": "^2.5.2",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
@@ -51,15 +51,15 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
+    "@angular/cli": "1.7.4",
+    "@angular/compiler-cli": "5.2.10",
+    "@angular/language-service": "5.2.10",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.57",
+    "@types/node": "^10.0.0",
     "@types/ramda": "^0.25.8",
     "@types/toastr": "^2.1.35",
-    "codelyzer": "~4.0.1",
+    "codelyzer": "4.3.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
@@ -69,11 +69,11 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ngrx-store-freeze": "^0.2.0",
-    "protractor": "~5.2.1",
+    "protractor": "5.3.1",
     "random-word": "^2.0.0",
     "source-map-explorer": "^1.5.0",
     "ts-node": "~3.3.0",
-    "tslint": "~5.8.0",
-    "typescript": "~2.4.2"
+    "tslint": "5.9.1",
+    "typescript": "2.6.2"
   }
 }
