--- a/package.json
+++ b/package.json
@@ -20,60 +20,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/platform-server": "5.2.10",
-    "@angular/router": "5.2.10",
-    "@angular/service-worker": "5.2.10",
-    "@ngrx/effects": "5.2.0",
-    "@ngrx/router-store": "5.2.0",
-    "@ngrx/store": "5.2.0",
-    "@ngrx/store-devtools": "5.2.0",
-    "@nguniversal/express-engine": "5.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "5.0.0",
-    "core-js": "^2.5.2",
-    "express": "^4.16.2",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
-    "json-server": "^0.12.1",
-    "ngx-modialog": "^5.0.0",
-    "ramda": "^0.25.0",
-    "rxjs": "^5.5.5",
-    "tachyons": "^4.9.0",
-    "toastr": "^2.1.4",
-    "ts-loader": "^3.2.0",
-    "zone.js": "^0.8.14"
+    "@angular/animations": "6.0.0",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/core": "6.0.0",
+    "@angular/forms": "6.0.0",
+    "@angular/http": "6.0.0",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/platform-server": "6.0.0",
+    "@angular/router": "6.0.0",
+    "@angular/service-worker": "6.0.0",
+    "@ngrx/effects": "v6.0.0-beta.1",
+    "@ngrx/router-store": "v6.0.0-beta.1",
+    "@ngrx/store": "v6.0.0-beta.1",
+    "@ngrx/store-devtools": "v6.0.0-beta.1",
+    "@nguniversal/express-engine": "6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "6.0.0",
+    "core-js": "2.5.5",
+    "express": "4.16.3",
+    "font-awesome": "4.7.0",
+    "jquery": "3.3.1",
+    "json-server": "0.12.2",
+    "ngx-modialog": "5.0.0",
+    "ramda": "0.25.0",
+    "rxjs": "6.1.0",
+    "rxjs-compat": "^6.1.0",
+    "tachyons": "4.9.1",
+    "toastr": "2.1.4",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.4",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/language-service": "5.2.10",
-    "@types/jasmine": "~2.8.2",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^10.0.0",
-    "@types/ramda": "^0.25.8",
-    "@types/toastr": "^2.1.35",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/cli": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/language-service": "6.0.0",
+    "@types/jasmine": "2.8.7",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "10.0.0",
+    "@types/ramda": "0.25.24",
+    "@types/toastr": "2.1.35",
     "codelyzer": "4.3.0",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ngrx-store-freeze": "^0.2.0",
+    "jasmine-core": "3.1.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "2.0.2",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.4.2",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "1.0.0",
+    "ngrx-store-freeze": "0.2.2",
     "protractor": "5.3.1",
-    "random-word": "^2.0.0",
-    "source-map-explorer": "^1.5.0",
-    "ts-node": "~3.3.0",
-    "tslint": "5.9.1",
-    "typescript": "2.6.2"
+    "random-word": "2.0.0",
+    "source-map-explorer": "1.5.0",
+    "ts-loader": "4.2.0",
+    "ts-node": "6.0.2",
+    "tslint": "5.10.0",
+    "typescript": "2.7.2"
   }
 }
