--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "npm run start:api & npm run start",
-    "ssr": "npm run start:api & npm run serve:uninversal",
-    "ng": "ng",
-    "start": "ng serve",
+    "dev": "npm-run-all start",
+    "ssr": "npm-run-all start:ssr",
+    "start": "npm-run-all --parallel start:api serve",
+    "start:ssr": "npm-run-all --parallel start:api serve:uninversal",
     "start:api": "json-server --watch db.json",
+    "ng": "ng",
+    "serve": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -16,7 +18,7 @@
     "serve:uninversal": "node dist/server.js",
     "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "generate:random-data": "ts-node ./bin/random-data.ts"
+    "generate:random-data": "ts-node ./script/random-data.ts"
   },
   "private": true,
   "dependencies": {
@@ -61,6 +63,7 @@
     "@types/ramda": "0.25.24",
     "@types/toastr": "2.1.35",
     "codelyzer": "4.3.0",
+    "jasmine": "^3.1.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.2",
@@ -70,8 +73,10 @@
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.0.0",
     "ngrx-store-freeze": "0.2.2",
+    "npm-run-all": "^4.1.3",
     "protractor": "5.3.1",
     "random-word": "2.0.0",
+    "rxfiddle": "^1.1.1",
     "source-map-explorer": "1.5.0",
     "ts-loader": "4.2.0",
     "ts-node": "6.0.2",
