--- a/package.json
+++ b/package.json
@@ -22,65 +22,65 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.0",
-    "@angular/common": "6.0.0",
-    "@angular/compiler": "6.0.0",
-    "@angular/core": "6.0.0",
-    "@angular/forms": "6.0.0",
-    "@angular/http": "6.0.0",
-    "@angular/platform-browser": "6.0.0",
-    "@angular/platform-browser-dynamic": "6.0.0",
-    "@angular/platform-server": "6.0.0",
-    "@angular/router": "6.0.0",
-    "@angular/service-worker": "6.0.0",
-    "@ngrx/effects": "v6.0.0-beta.1",
-    "@ngrx/router-store": "v6.0.0-beta.1",
-    "@ngrx/store": "v6.0.0-beta.1",
-    "@ngrx/store-devtools": "v6.0.0-beta.1",
-    "@nguniversal/express-engine": "6.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "6.0.0",
-    "core-js": "2.5.5",
+    "@angular/animations": "6.1.4",
+    "@angular/common": "6.1.4",
+    "@angular/compiler": "6.1.4",
+    "@angular/core": "6.1.4",
+    "@angular/forms": "6.1.4",
+    "@angular/http": "6.1.4",
+    "@angular/platform-browser": "6.1.4",
+    "@angular/platform-browser-dynamic": "6.1.4",
+    "@angular/platform-server": "6.1.4",
+    "@angular/router": "6.1.4",
+    "@angular/service-worker": "6.1.4",
+    "@ngrx/effects": "6.1.0",
+    "@ngrx/router-store": "6.1.0",
+    "@ngrx/store": "6.1.0",
+    "@ngrx/store-devtools": "6.1.0",
+    "@nguniversal/express-engine": "6.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "6.1.0",
+    "core-js": "2.5.7",
     "express": "4.16.3",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
-    "json-server": "0.12.2",
+    "json-server": "0.14.0",
     "ngx-modialog": "5.0.0",
     "ramda": "0.25.0",
-    "rxjs": "6.1.0",
+    "rxjs": "6.2.2",
     "rxjs-compat": "^6.1.0",
-    "tachyons": "4.9.1",
+    "tachyons": "4.11.1",
     "toastr": "2.1.4",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
-    "@angular/language-service": "6.0.0",
-    "@types/jasmine": "2.8.7",
+    "@angular-devkit/build-angular": "0.7.5",
+    "@angular/cli": "6.1.5",
+    "@angular/compiler-cli": "6.1.4",
+    "@angular/language-service": "6.1.4",
+    "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "10.0.0",
-    "@types/ramda": "0.25.24",
+    "@types/node": "10.9.1",
+    "@types/ramda": "0.25.36",
     "@types/toastr": "2.1.35",
-    "codelyzer": "4.3.0",
-    "jasmine": "^3.1.0",
-    "jasmine-core": "3.1.0",
+    "codelyzer": "4.4.4",
+    "jasmine": "^3.2.0",
+    "jasmine-core": "3.2.1",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.2",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "1.4.2",
     "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.0.0",
-    "ngrx-store-freeze": "0.2.2",
+    "karma-jasmine-html-reporter": "1.3.1",
+    "ngrx-store-freeze": "0.2.4",
     "npm-run-all": "^4.1.3",
-    "protractor": "5.3.1",
+    "protractor": "5.4.0",
     "random-word": "2.0.0",
     "rxfiddle": "^1.1.1",
-    "source-map-explorer": "1.5.0",
-    "ts-loader": "4.2.0",
+    "source-map-explorer": "1.6.0",
+    "ts-loader": "4.5.0",
     "ts-node": "6.0.2",
-    "tslint": "5.10.0",
-    "typescript": "2.7.2"
+    "tslint": "5.11.0",
+    "typescript": "2.9.2"
   }
 }
