--- a/package.json
+++ b/package.json
@@ -3,67 +3,66 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all start",
-    "ssr": "npm-run-all start:ssr",
     "start": "npm-run-all --parallel start:api serve",
     "start:ssr": "npm-run-all --parallel start:api serve:uninversal",
     "start:api": "json-server --watch db.json",
+    "ssr": "npm-run-all start:ssr",
     "ng": "ng",
     "serve": "ng serve",
+    "serve:uninversal": "node dist/server.js",
     "build": "ng build",
+    "build:prod": "ng build --prod",
+    "build:uninversal": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:uninversal": "npm run build:client-and-server-bundles && npm run webpack:server",
-    "serve:uninversal": "node dist/server.js",
-    "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
     "generate:random-data": "ts-node ./script/random-data.ts"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.4",
-    "@angular/common": "6.1.4",
-    "@angular/compiler": "6.1.4",
-    "@angular/core": "6.1.4",
-    "@angular/forms": "6.1.4",
-    "@angular/http": "6.1.4",
-    "@angular/platform-browser": "6.1.4",
-    "@angular/platform-browser-dynamic": "6.1.4",
-    "@angular/platform-server": "6.1.4",
-    "@angular/router": "6.1.4",
-    "@angular/service-worker": "6.1.4",
+    "@angular/animations": "7.2.12",
+    "@angular/common": "7.2.12",
+    "@angular/compiler": "7.2.12",
+    "@angular/core": "7.2.12",
+    "@angular/forms": "7.2.12",
+    "@angular/http": "7.2.12",
+    "@angular/platform-browser": "7.2.12",
+    "@angular/platform-browser-dynamic": "7.2.12",
+    "@angular/platform-server": "7.2.12",
+    "@angular/router": "7.2.12",
+    "@angular/service-worker": "7.2.12",
     "@ngrx/effects": "6.1.0",
     "@ngrx/router-store": "6.1.0",
     "@ngrx/store": "6.1.0",
     "@ngrx/store-devtools": "6.1.0",
-    "@nguniversal/express-engine": "6.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "6.1.0",
+    "@nguniversal/express-engine": "7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "7.1.1",
     "core-js": "2.5.7",
-    "express": "4.16.3",
+    "express": "4.16.4",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
-    "json-server": "0.14.0",
-    "ramda": "0.25.0",
-    "rxjs": "6.2.2",
-    "rxjs-compat": "^6.1.0",
+    "json-server": "0.14.2",
+    "ramda": "0.26.1",
+    "rxjs": "6.4.0",
     "tachyons": "4.11.1",
     "toastr": "2.1.4",
-    "zone.js": "0.8.26"
+    "zone.js": "0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.7.5",
-    "@angular/cli": "6.1.5",
-    "@angular/compiler-cli": "6.1.4",
-    "@angular/language-service": "6.1.4",
-    "@types/jasmine": "2.8.8",
-    "@types/jasminewd2": "2.0.3",
-    "@types/node": "10.9.1",
+    "@angular-devkit/build-angular": "0.13.8",
+    "@angular/cli": "7.3.8",
+    "@angular/compiler-cli": "7.2.12",
+    "@angular/language-service": "7.2.12",
+    "@types/jasmine": "3.3.12",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "11.13.0",
     "@types/ramda": "0.25.36",
-    "@types/toastr": "2.1.35",
-    "codelyzer": "4.4.4",
-    "jasmine": "^3.2.0",
-    "jasmine-core": "3.2.1",
+    "@types/toastr": "2.1.37",
+    "codelyzer": "5.0.0",
+    "jasmine": "3.4.0",
+    "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.2",
     "karma-chrome-launcher": "2.2.0",
@@ -72,14 +71,13 @@
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.3.1",
     "ngrx-store-freeze": "0.2.4",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "4.1.5",
     "protractor": "5.4.0",
     "random-word": "2.0.0",
-    "rxfiddle": "^1.1.1",
-    "source-map-explorer": "1.6.0",
-    "ts-loader": "4.5.0",
-    "ts-node": "6.0.2",
-    "tslint": "5.11.0",
-    "typescript": "2.9.2"
+    "source-map-explorer": "1.8.0",
+    "ts-loader": "5.3.3",
+    "ts-node": "8.0.3",
+    "tslint": "5.15.0",
+    "typescript": "3.2.4"
   }
 }
