--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,3 +1,14 @@
 {
-  "extends": "./tsconfig.app.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "../out-tsc/app",
+    "baseUrl": ".",
+    "types": [],
+    "paths": {
+      "@app/*": ["app/*"],
+      "@assets/*": ["assets/*"],
+      "@environments/*": ["environments/*"]
+    }
+  },
+  "exclude": ["test.ts", "**/*.spec.ts"]
 }
