--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "license": "MIT",
   "scripts": {
     "start": "npm-run-all --parallel start:api serve",
-    "start:ssr": "npm-run-all --parallel start:api serve:uninversal",
+    "start:ssr": "npm-run-all --parallel start:api serve:ssr",
     "start:api": "json-server --watch db.json",
     "ssr": "npm-run-all start:ssr",
     "ng": "ng",
     "serve": "ng serve",
-    "serve:uninversal": "node dist/server.js",
+    "serve:ssr": "node dist/server.js",
     "build": "ng build",
     "build:prod": "ng build --prod",
-    "build:uninversal": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
     "test": "ng test",
     "lint": "ng lint",
@@ -33,13 +33,13 @@
     "@angular/platform-server": "7.2.12",
     "@angular/router": "7.2.12",
     "@angular/service-worker": "7.2.12",
-    "@ngrx/effects": "6.1.0",
-    "@ngrx/router-store": "6.1.0",
-    "@ngrx/store": "6.1.0",
-    "@ngrx/store-devtools": "6.1.0",
+    "@ngrx/effects": "7.4.0",
+    "@ngrx/router-store": "7.4.0",
+    "@ngrx/store": "7.4.0",
+    "@ngrx/store-devtools": "7.4.0",
     "@nguniversal/express-engine": "7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "7.1.1",
-    "core-js": "2.5.7",
+    "core-js": "2.6.5",
     "express": "4.16.4",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
@@ -48,7 +48,7 @@
     "rxjs": "6.4.0",
     "tachyons": "4.11.1",
     "toastr": "2.1.4",
-    "zone.js": "0.9.0"
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.13.8",
@@ -64,15 +64,15 @@
     "jasmine": "3.4.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
+    "karma": "4.0.1",
     "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.4.2",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.3.1",
+    "karma-cli": "2.0.0",
+    "karma-coverage-istanbul-reporter": "2.0.5",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.4.0",
     "ngrx-store-freeze": "0.2.4",
     "npm-run-all": "4.1.5",
-    "protractor": "5.4.0",
+    "protractor": "5.4.2",
     "random-word": "2.0.0",
     "source-map-explorer": "1.8.0",
     "ts-loader": "5.3.3",
