--- a/angular.json
+++ b/angular.json
@@ -19,15 +19,12 @@
             "polyfills": "src/polyfills.ts",
             "assets": ["src/assets", "src/favicon.ico"],
             "styles": [
+              "node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "node_modules/tachyons/css/tachyons.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/toastr/build/toastr.min.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/toastr/build/toastr.min.js"
-            ],
+            "scripts": [],
             "es5BrowserSupport": true
           },
           "configurations": {
