--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.2.12",
+    "@angular/cdk": "~7.3.6",
     "@angular/common": "7.2.12",
     "@angular/compiler": "7.2.12",
     "@angular/core": "7.2.12",
     "@angular/forms": "7.2.12",
     "@angular/http": "7.2.12",
+    "@angular/material": "7.3.6",
     "@angular/platform-browser": "7.2.12",
     "@angular/platform-browser-dynamic": "7.2.12",
     "@angular/platform-server": "7.2.12",
@@ -44,12 +46,10 @@
     "core-js": "2.6.5",
     "express": "4.16.4",
     "font-awesome": "4.7.0",
-    "jquery": "3.3.1",
     "json-server": "0.14.2",
     "ramda": "0.26.1",
     "rxjs": "6.4.0",
     "tachyons": "4.11.1",
-    "toastr": "2.1.4",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
