--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "ramda": "0.26.1",
     "rxjs": "6.4.0",
     "tachyons": "4.11.1",
+    "typescript-fsa": "3.0.0-beta-2",
+    "typescript-fsa-reducers": "1.2.1",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
