--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,14 +1,3 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "baseUrl": ".",
-    "types": [],
-    "paths": {
-      "@app/*": ["app/*"],
-      "@assets/*": ["assets/*"],
-      "@environments/*": ["environments/*"]
-    }
-  },
-  "exclude": ["test.ts", "**/*.spec.ts"]
+  "extends": "./tsconfig.app.json"
 }
