--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start:api": "json-server --watch db.json",
     "ssr": "npm-run-all start:ssr",
     "ng": "ng",
+    "postinstall": "echo ivy-ngcc",
     "serve": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --prod",
+    "build:analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/inventory-app/stats.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -24,19 +26,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.12",
-    "@angular/cdk": "~7.3.6",
-    "@angular/common": "7.2.12",
-    "@angular/compiler": "7.2.12",
-    "@angular/core": "7.2.12",
-    "@angular/forms": "7.2.12",
-    "@angular/http": "7.2.12",
+    "@angular/animations": "8.0.0-beta.11",
+    "@angular/cdk": "7.3.6",
+    "@angular/common": "8.0.0-beta.11",
+    "@angular/compiler": "8.0.0-beta.11",
+    "@angular/core": "8.0.0-beta.11",
+    "@angular/forms": "8.0.0-beta.11",
+    "@angular/http": "8.0.0-beta.10",
     "@angular/material": "7.3.6",
-    "@angular/platform-browser": "7.2.12",
-    "@angular/platform-browser-dynamic": "7.2.12",
-    "@angular/platform-server": "7.2.12",
-    "@angular/router": "7.2.12",
-    "@angular/service-worker": "7.2.12",
+    "@angular/platform-browser": "8.0.0-beta.11",
+    "@angular/platform-browser-dynamic": "8.0.0-beta.11",
+    "@angular/platform-server": "8.0.0-beta.11",
+    "@angular/router": "8.0.0-beta.11",
+    "@angular/service-worker": "8.0.0-beta.11",
     "@ngrx/effects": "7.4.0",
     "@ngrx/router-store": "7.4.0",
     "@ngrx/store": "7.4.0",
@@ -55,10 +57,10 @@
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.8",
-    "@angular/cli": "7.3.8",
-    "@angular/compiler-cli": "7.2.12",
-    "@angular/language-service": "7.2.12",
+    "@angular-devkit/build-angular": "0.800.0-beta.11",
+    "@angular/cli": "8.0.0-beta.11",
+    "@angular/compiler-cli": "8.0.0-beta.11",
+    "@angular/language-service": "8.0.0-beta.11",
     "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "11.13.0",
@@ -82,7 +84,7 @@
     "ts-loader": "5.3.3",
     "ts-node": "8.0.3",
     "tslint": "5.15.0",
-    "typescript": "3.2.4",
+    "typescript": "3.3.3333",
     "webpack-cli": "3.3.0"
   }
 }
