--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/app-server",
     "baseUrl": ".",
+    "outDir": "./out-tsc/app-server",
     "module": "commonjs",
     "types": []
   },
