--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "license": "MIT",
   "scripts": {
     "start": "npm-run-all --parallel start:api serve",
+    "start:ivy": "npm-run-all --parallel start:api serve:ivy",
     "start:ssr": "npm run build:ssr && npm-run-all --parallel start:api serve:ssr",
     "start:api": "json-server --watch db.json",
     "ssr": "npm-run-all start:ssr",
     "ng": "ng",
     "postinstall": "echo ivy-ngcc",
     "serve": "ng serve",
+    "serve:ivy": "ng serve -c ivy",
     "build": "ng build",
     "build:prod": "ng build --prod",
     "build:analyze": "ng build --prod --stats-json && webpack-bundle-analyzer dist/inventory-app/stats.json",
@@ -52,9 +54,10 @@
     "ramda": "0.26.1",
     "rxjs": "6.4.0",
     "tachyons": "4.11.1",
+    "tslib": "1.9.0",
     "typescript-fsa": "3.0.0-beta-2",
     "typescript-fsa-reducers": "1.2.1",
-    "zone.js": "0.8.29"
+    "zone.js": "0.9.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.800.0-beta.11",
