--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "npm-run-all --parallel start:api serve",
+    "start:augury": "ng serve --configuration augury",
     "start:ssr": "npm run build:ssr && npm-run-all --parallel start:api serve:ssr",
     "start:api": "json-server --watch db.json",
     "ssr": "npm-run-all start:ssr",
@@ -37,6 +38,7 @@
     "@angular/platform-server": "7.2.12",
     "@angular/router": "7.2.12",
     "@angular/service-worker": "7.2.12",
+    "@augury/schematics": "0.6.1",
     "@ngrx/effects": "7.4.0",
     "@ngrx/router-store": "7.4.0",
     "@ngrx/store": "7.4.0",
@@ -59,6 +61,8 @@
     "@angular/cli": "7.3.8",
     "@angular/compiler-cli": "7.2.12",
     "@angular/language-service": "7.2.12",
+    "@augury/core": "0.6.0",
+    "@augury/performance-profiler-plugin": "0.6.1",
     "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "11.13.0",
